# libGPULayers

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mypy.ini  .pycodestyle.ini  .pylintrc  CMakeLists.txt  LICENSE.txt  README.md  generate_vulkan_layer.py  lgl_android_install.py  lgl_host_server.py  lgl_mali_timeline_viewer.py  lgl_mali_trace_viewer.py  pylint.sh  pytest_local.bat  pytest_local.sh
.github/workflows/: build_test.yaml  native_test.yaml  python_test.yaml
cmake/: clang-tools.cmake
docs/: about_layers.md  building.md  creating.md  extension_support.md  faq.md  running.md  running_android.md  running_linux.md  updating_protobuf_files.md
generator/: generate_vulkan_common.py  generate_vulkan_layer.py
generator/vk_codegen/: android_install.json  android_install.py  device_defs.txt  device_dispatch_table.txt  function_vkCreateDevice.txt  function_vkCreateInstance.txt  function_vkGetDeviceImageMemoryRequirementsKHR.txt  header.txt  instance_defs.txt  instance_dispatch_table.txt  manifest.json  root_CMakeLists.txt  source_CMakeLists.txt
generator/vk_common/: CMakeLists.txt  entry_utils.hpp  utils.hpp
generator/vk_layer/: android_build.sh
layer_example/: CMakeLists.txt  android_install.json  android_install.py  manifest.json
layer_example/source/: CMakeLists.txt  config.cpp  device.cpp  device.hpp  entry.cpp  instance.cpp  instance.hpp  layer_device_functions.cpp  layer_device_functions.hpp
layer_gpu_performance/: CMakeLists.txt  README_LAYER.md  android_install.json  android_install.py
layer_gpu_performance/source/: CMakeLists.txt  device.cpp  device.hpp  device_utils.hpp  layer_device_functions.hpp  layer_device_functions_command_buffer.cpp  layer_device_functions_command_pool.cpp  layer_device_functions_debug.cpp  layer_device_functions_dispatch.cpp  layer_device_functions_queue.cpp  layer_device_functions_render_pass.cpp  layer_device_functions_trace_rays.cpp  layer_device_functions_transfer.cpp  layer_instance_functions.hpp  layer_instance_functions_device.cpp  performance_comms.cpp  performance_comms.hpp  version.hpp.in
layer_gpu_profile/: CMakeLists.txt  README_LAYER.md  android_build.sh  layer_config.json  manifest.json
layer_gpu_profile/docs/: developer-docs.md
layer_gpu_profile/source/: CMakeLists.txt  device.cpp  device.hpp  device_utils.hpp  instance.cpp  instance.hpp  layer_comms.cpp  layer_comms.hpp  layer_config.cpp  layer_config.hpp  layer_device_functions.hpp  layer_device_functions_debug.cpp  layer_device_functions_dispatch.cpp  layer_device_functions_dispatch_data_graph.cpp  layer_device_functions_queue.cpp  layer_device_functions_render_pass.cpp  layer_device_functions_trace_rays.cpp  layer_device_functions_transfer.cpp  layer_instance_functions.cpp  layer_instance_functions.hpp  submit_visitor.cpp  submit_visitor.hpp  version.hpp.in
layer_gpu_support/: CMakeLists.txt  README_LAYER.md  android_install.json  layer_config.json  manifest.json  run.sh
layer_gpu_support/source/: CMakeLists.txt  device.cpp  device.hpp  instance.cpp  instance.hpp  layer_config.cpp  layer_config.hpp  layer_device_functions.hpp  layer_device_functions_allocate_memory.cpp  layer_device_functions_dispatch.cpp  layer_device_functions_image.cpp  layer_device_functions_pipelines.cpp  layer_device_functions_queue.cpp  layer_device_functions_render_pass.cpp  layer_device_functions_swapchain.cpp  layer_device_functions_trace_rays.cpp  layer_device_functions_transfer.cpp  layer_instance_functions.hpp  layer_instance_functions_get_physical_properties.cpp  version.hpp.in
layer_gpu_timeline/: CMakeLists.txt  README_LAYER.md  android_build.sh  android_install.json  android_install.py  manifest.json  timeline.proto
layer_gpu_timeline/docs/: command_buffer_model.md  developer-docs.md
layer_gpu_timeline/source/: CMakeLists.txt  device.cpp  device.hpp  device_utils.hpp  entry.cpp  instance.cpp  instance.hpp  layer_device_functions.hpp  layer_device_functions_command_buffer.cpp  layer_device_functions_command_pool.cpp  layer_device_functions_debug.cpp  layer_device_functions_dispatch.cpp  layer_device_functions_dispatch_data_graph.cpp  layer_device_functions_draw_call.cpp  layer_device_functions_queue.cpp  layer_device_functions_render_pass.cpp  layer_device_functions_trace_rays.cpp  layer_device_functions_transfer.cpp  layer_instance_functions.cpp  layer_instance_functions.hpp  timeline_comms.cpp  timeline_comms.hpp  timeline_protobuf_encoder.cpp  timeline_protobuf_encoder.hpp  version.hpp.in  workload_metadata_builder.cpp  workload_metadata_builder.hpp
layer_khronos_validation/: README_LAYER.md  android_install.json  manifest.json
lglpy/: server.py  service_gpu_timeline.py  service_log.py  service_test.py
lglpy/android/: adb.py  filesystem.py  perfetto.cfg  test.py  test_data.sh  utils.py
lglpy/comms/: server.py  service_gpu_profile.py  service_gpu_timeline.py  service_log.py  service_test.py
lglpy/timeline/: __init__.py
lglpy/ui/: console.py  test.py
source_common/: CMakeLists.txt  compiler_helper.cmake
source_common/comms/: CMakeLists.txt  comms_interface.hpp  comms_message.cpp  comms_message.hpp  comms_module.cpp  comms_module.hpp  comms_receiver.cpp  comms_receiver.hpp  comms_transmitter.cpp  comms_transmitter.hpp
source_common/comms/test/: CMakeLists.txt  comms_test_server.cpp  comms_test_server.hpp  unittest_comms.cpp  unittest_comms_client.cpp
source_common/framework/: CMakeLists.txt  device_dispatch_table.hpp  device_functions.cpp  device_functions.hpp  device_functions_manual.cpp  device_functions_query.hpp  device_query.cpp  device_query.hpp  entry.cpp  entry_utils.cpp  entry_utils.hpp  instance_dispatch_table.hpp  instance_functions.cpp  instance_functions.hpp  instance_functions_manual.cpp  instance_functions_manual.hpp  instance_functions_query.hpp  manual_functions.cpp  manual_functions.hpp  utils.hpp
source_common/trackers/: CMakeLists.txt  command_buffer.cpp  command_buffer.hpp  device.cpp  device.hpp  layer_command_stream.cpp  layer_command_stream.hpp  queue.cpp  queue.hpp  render_pass.cpp  render_pass.hpp  (+1 more)
(+419 files in other folders)
